--- a/lesson7/HW7.ipynb
+++ b/lesson7/HW7.ipynb
@@ -1250,7 +1250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Интерпретация в процессе....разбираюсь"
+    "##### Age, hours-per-week, education-num вносят с ростом положительный вклад (приближают значение target к 1), а capital-gain - отрицательный (приближает значение target к 0)."
    ]
   },
   {
